--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.14",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@unocss/nuxt": "^0.48.5"
