--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@kricsleo/observer-vue": "^0.1.11",
     "@kricsleo/waterfall-flow": "^1.0.3",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
